--- a/src/output.css
+++ b/src/output.css
@@ -733,6 +733,11 @@ video {
   clear: none;
 }
 
+.mx-auto{
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .mt-2{
   margin-top: 0.5rem;
 }
@@ -1408,6 +1413,12 @@ video {
   border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
 }
 
+.divide-y-\[1px\] > :not([hidden]) ~ :not([hidden]){
+  --tw-divide-y-reverse: 0;
+  border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
+  border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+}
+
 .divide-y-reverse > :not([hidden]) ~ :not([hidden]){
   --tw-divide-y-reverse: 1;
 }
@@ -1434,6 +1445,11 @@ video {
 
 .divide-none > :not([hidden]) ~ :not([hidden]){
   border-style: none;
+}
+
+.divide-blue1 > :not([hidden]) ~ :not([hidden]){
+  --tw-divide-opacity: 1;
+  border-color: rgb(38 109 241 / var(--tw-divide-opacity, 1));
 }
 
 .place-self-auto{
@@ -1832,6 +1848,11 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
 }
 
+.bg-blue-light{
+  --tw-bg-opacity: 1;
+  background-color: rgb(86 141 244 / var(--tw-bg-opacity, 1));
+}
+
 .bg-opacity-40{
   --tw-bg-opacity: 0.4;
 }
@@ -1969,6 +1990,16 @@ video {
   padding-right: 1.25rem;
 }
 
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .text-left{
   text-align: left;
 }
@@ -2025,11 +2056,6 @@ video {
   vertical-align: super;
 }
 
-.text-base{
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
 .text-5xl{
   font-size: 3rem;
   line-height: 1;
@@ -2037,10 +2063,6 @@ video {
 
 .font-bold{
   font-weight: 700;
-}
-
-.font-normal{
-  font-weight: 400;
 }
 
 .uppercase{
@@ -2111,20 +2133,20 @@ video {
   font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero) var(--tw-numeric-figure) var(--tw-numeric-spacing) var(--tw-numeric-fraction);
 }
 
-.leading-normal{
-  line-height: 1.5;
-}
-
 .leading-\[3\.5rem\]{
   line-height: 3.5rem;
 }
 
-.tracking-\[-0\.066rem\]{
+.-tracking-\[0\.066rem\]{
   letter-spacing: -0.066rem;
 }
 
-.-tracking-\[0\.066rem\]{
-  letter-spacing: -0.066rem;
+.tracking-\[\]{
+  letter-spacing: ;
+}
+
+.tracking-\[0\.2px\]{
+  letter-spacing: 0.2px;
 }
 
 .text-\[\#336699\]\/\[\.35\]{
@@ -2139,11 +2161,6 @@ video {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.text-\[\#1361f0\]{
-  --tw-text-opacity: 1;
-  color: rgb(19 97 240 / var(--tw-text-opacity, 1));
 }
 
 .underline{
@@ -2595,10 +2612,142 @@ body{
   }
 }
 
+@media (min-width: 768px){
+  .md\:flex-row{
+    flex-direction: row;
+  }
+
+  .md\:divide-x-\[1px\] > :not([hidden]) ~ :not([hidden]){
+    --tw-divide-x-reverse: 0;
+    border-right-width: calc(1px * var(--tw-divide-x-reverse));
+    border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
+  }
+
+  .md\:divide-y-0 > :not([hidden]) ~ :not([hidden]){
+    --tw-divide-y-reverse: 0;
+    border-top-width: calc(0px * calc(1 - var(--tw-divide-y-reverse)));
+    border-bottom-width: calc(0px * var(--tw-divide-y-reverse));
+  }
+}
+
+@media (min-width: 1024px){
+  .lg\:max-w-siteWidth{
+    max-width: 1512px;
+  }
+
+  .lg\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+}
+
 @media (prefers-color-scheme: dark){
   @media (min-width: 1024px){
     .dark\:lg\:hover\:\[paint-order\:markers\]:hover{
       paint-order: markers;
     }
+  }
+}
+
+.\[\&\>a\:hover\]\:bg-blue1>a:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(38 109 241 / var(--tw-bg-opacity, 1));
+}
+
+.\[\&\>a\]\:max-w-full>a{
+  max-width: 100%;
+}
+
+.\[\&\>a\]\:flex-auto>a{
+  flex: 1 1 auto;
+}
+
+.\[\&\>a\]\:cursor-pointer>a{
+  cursor: pointer;
+}
+
+.\[\&\>a\]\:p-8>a{
+  padding: 2rem;
+}
+
+.\[\&\>a\]\:px-5>a{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.\[\&\>a\]\:py-8>a{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.\[\&\>a\]\:px-8>a{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.\[\&\>a\]\:py-5>a{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.\[\&\>a\]\:text-center>a{
+  text-align: center;
+}
+
+.\[\&\>a\]\:text-2xl>a{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.\[\&\>a\]\:text-base>a{
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.\[\&\>a\]\:text-xl>a{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.\[\&\>a\]\:font-semibold>a{
+  font-weight: 600;
+}
+
+.\[\&\>a\]\:leading-5>a{
+  line-height: 1.25rem;
+}
+
+.\[\&\>a\]\:leading-\[22px\]>a{
+  line-height: 22px;
+}
+
+.\[\&\>a\]\:tracking-\[0\.2px\]>a{
+  letter-spacing: 0.2px;
+}
+
+.\[\&\>a\]\:text-white>a{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.\[\&\>a\]\:transition>a{
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.\[\&\>a\]\:duration-300>a{
+  transition-duration: 300ms;
+}
+
+@media (min-width: 1024px){
+  .lg\:\[\&\>a\]\:flex-auto>a{
+    flex: 1 1 auto;
+  }
+
+  .\[\&\>a\]\:lg\:px-4>a{
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
