--- a/src/output.css
+++ b/src/output.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 
 *, ::before, ::after{
   --tw-border-spacing-x: 0;
@@ -556,6 +556,63 @@ video {
   display: none;
 }
 
+/* h1 {
+    @apply text-64 font-normal leading-none;
+  } */
+
+/* h1 {
+    @apply text-5xl font-normal leading-none;
+  } */
+
+h2{
+  font-family: Lato, sans-serif;
+  font-size: 2.75rem;
+  font-weight: 700;
+  line-height: 3.5rem;
+  letter-spacing: -0.0605rem;
+}
+
+@media (min-width: 768px){
+  h2{
+    font-size: 3rem;
+    line-height: 1;
+    letter-spacing: -0.066rem;
+  }
+}
+
+h3{
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 700;
+  line-height: 1;
+}
+
+h4{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 700;
+  line-height: 1;
+}
+
+p{
+  font-family: Lato, sans-serif;
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 2rem;
+}
+
+.block-pad{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+@media (min-width: 768px){
+  .block-pad{
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+}
+
 .container{
   width: 100%;
 }
@@ -742,6 +799,14 @@ video {
   margin-top: 0.5rem;
 }
 
+.mt-5{
+  margin-top: 1.25rem;
+}
+
+.mt-6{
+  margin-top: 1.5rem;
+}
+
 .box-border{
   box-sizing: border-box;
 }
@@ -865,8 +930,12 @@ video {
   width: 100%;
 }
 
-.max-w-\[700px\]{
-  max-width: 700px;
+.max-w-\[600px\]{
+  max-width: 600px;
+}
+
+.flex-none{
+  flex: none;
 }
 
 .flex-shrink{
@@ -1393,6 +1462,12 @@ video {
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
 .space-y-reverse > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 1;
 }
@@ -1845,7 +1920,7 @@ video {
 
 .bg-black{
   --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
+  background-color: rgb(52 64 84 / var(--tw-bg-opacity, 1));
 }
 
 .bg-blue-light{
@@ -1990,14 +2065,8 @@ video {
   padding-right: 1.25rem;
 }
 
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
-.py-5{
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
+.pt-\[100px\]{
+  padding-top: 100px;
 }
 
 .text-left{
@@ -2054,11 +2123,6 @@ video {
 
 .align-super{
   vertical-align: super;
-}
-
-.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
 }
 
 .font-bold{
@@ -2133,20 +2197,12 @@ video {
   font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero) var(--tw-numeric-figure) var(--tw-numeric-spacing) var(--tw-numeric-fraction);
 }
 
-.leading-\[3\.5rem\]{
-  line-height: 3.5rem;
+.leading-22{
+  line-height: 1.375rem;
 }
 
-.-tracking-\[0\.066rem\]{
-  letter-spacing: -0.066rem;
-}
-
-.tracking-\[\]{
-  letter-spacing: ;
-}
-
-.tracking-\[0\.2px\]{
-  letter-spacing: 0.2px;
+.tracking-1\.5{
+  letter-spacing: 0.09375rem;
 }
 
 .text-\[\#336699\]\/\[\.35\]{
@@ -2156,6 +2212,11 @@ video {
 .text-blue-500{
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity, 1));
+}
+
+.text-blue1{
+  --tw-text-opacity: 1;
+  color: rgb(38 109 241 / var(--tw-text-opacity, 1));
 }
 
 .text-white{
@@ -2531,6 +2592,8 @@ video {
 
 body{
   font-family: Lato, sans-serif;
+  --tw-text-opacity: 1;
+  color: rgb(52 64 84 / var(--tw-text-opacity, 1));
 }
 
 .holder{
@@ -2546,6 +2609,19 @@ body{
     padding-left: 3rem;
     padding-right: 3rem;
   }
+}
+
+.btn{
+  cursor: pointer;
+  text-align: center;
+  font-family: Lato, sans-serif;
+  font-size: 1.125rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  line-height: 2rem;
+  --tw-text-opacity: 1;
+  color: rgb(38 109 241 / var(--tw-text-opacity, 1));
+  text-decoration-line: underline;
 }
 
 @media (min-width: 640px){
@@ -2613,6 +2689,10 @@ body{
 }
 
 @media (min-width: 768px){
+  .md\:mt-0{
+    margin-top: 0px;
+  }
+
   .md\:flex-row{
     flex-direction: row;
   }
@@ -2631,12 +2711,24 @@ body{
 }
 
 @media (min-width: 1024px){
+  .lg\:ml-auto{
+    margin-left: auto;
+  }
+
+  .lg\:w-1\/2{
+    width: 50%;
+  }
+
+  .lg\:max-w-\[510px\]{
+    max-width: 510px;
+  }
+
   .lg\:max-w-siteWidth{
     max-width: 1512px;
   }
 
-  .lg\:grid-cols-4{
-    grid-template-columns: repeat(4, minmax(0, 1fr));
+  .lg\:max-w-\[600px\]{
+    max-width: 600px;
   }
 }
 
@@ -2657,10 +2749,6 @@ body{
   max-width: 100%;
 }
 
-.\[\&\>a\]\:flex-auto>a{
-  flex: 1 1 auto;
-}
-
 .\[\&\>a\]\:cursor-pointer>a{
   cursor: pointer;
 }
@@ -2669,38 +2757,8 @@ body{
   padding: 2rem;
 }
 
-.\[\&\>a\]\:px-5>a{
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
-.\[\&\>a\]\:py-8>a{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.\[\&\>a\]\:px-8>a{
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
-.\[\&\>a\]\:py-5>a{
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
 .\[\&\>a\]\:text-center>a{
   text-align: center;
-}
-
-.\[\&\>a\]\:text-2xl>a{
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.\[\&\>a\]\:text-base>a{
-  font-size: 1rem;
-  line-height: 1.5rem;
 }
 
 .\[\&\>a\]\:text-xl>a{
@@ -2710,10 +2768,6 @@ body{
 
 .\[\&\>a\]\:font-semibold>a{
   font-weight: 600;
-}
-
-.\[\&\>a\]\:leading-5>a{
-  line-height: 1.25rem;
 }
 
 .\[\&\>a\]\:leading-\[22px\]>a{
@@ -2744,10 +2798,5 @@ body{
 @media (min-width: 1024px){
   .lg\:\[\&\>a\]\:flex-auto>a{
     flex: 1 1 auto;
-  }
-
-  .\[\&\>a\]\:lg\:px-4>a{
-    padding-left: 1rem;
-    padding-right: 1rem;
   }
 }
