--- a/src/output.css
+++ b/src/output.css
@@ -942,6 +942,10 @@ p{
   max-width: 600px;
 }
 
+.flex-none{
+  flex: none;
+}
+
 .flex-shrink{
   flex-shrink: 1;
 }
@@ -1490,6 +1494,12 @@ p{
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-y-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
 .space-y-4 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1953,14 +1963,14 @@ p{
   border-style: none;
 }
 
-.border-\[\#d0d5dd\]{
+.border-gray2{
   --tw-border-opacity: 1;
   border-color: rgb(208 213 221 / var(--tw-border-opacity, 1));
 }
 
-.border-gray2{
+.border-gray4{
   --tw-border-opacity: 1;
-  border-color: rgb(208 213 221 / var(--tw-border-opacity, 1));
+  border-color: rgb(214 214 214 / var(--tw-border-opacity, 1));
 }
 
 .bg-\[rgb\(255\2c 0\2c 0\)\]{
@@ -1971,6 +1981,11 @@ p{
 .bg-black{
   --tw-bg-opacity: 1;
   background-color: rgb(52 64 84 / var(--tw-bg-opacity, 1));
+}
+
+.bg-blue-light{
+  --tw-bg-opacity: 1;
+  background-color: rgb(86 141 244 / var(--tw-bg-opacity, 1));
 }
 
 .bg-gray1{
@@ -2103,6 +2118,10 @@ p{
 .object-scale-down{
   -o-object-fit: scale-down;
      object-fit: scale-down;
+}
+
+.p-6{
+  padding: 1.5rem;
 }
 
 .p-\[calc\(6rem\/4\)\]{
@@ -2284,11 +2303,6 @@ p{
 
 .text-\[\#336699\]\/\[\.35\]{
   color: rgb(51 102 153 / .35);
-}
-
-.text-\[\#484848\]{
-  --tw-text-opacity: 1;
-  color: rgb(72 72 72 / var(--tw-text-opacity, 1));
 }
 
 .text-black2{
@@ -2753,11 +2767,6 @@ body{
   }
 }
 
-.hover\:bg-\[\#f9f9f9\]:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 249 249 / var(--tw-bg-opacity, 1));
-}
-
 .hover\:bg-gray3:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(249 249 249 / var(--tw-bg-opacity, 1));
@@ -2830,6 +2839,10 @@ body{
     grid-column: span 4 / span 4;
   }
 
+  .lg\:w-1\/3{
+    width: 33.333333%;
+  }
+
   .lg\:max-w-siteWidth{
     max-width: 1336px;
   }
@@ -2840,6 +2853,10 @@ body{
 
   .lg\:grid-cols-8{
     grid-template-columns: repeat(8, minmax(0, 1fr));
+  }
+
+  .lg\:flex-row{
+    flex-direction: row;
   }
 
   .lg\:gap-16{
