--- a/src/output.css
+++ b/src/output.css
@@ -942,16 +942,8 @@ p{
   max-width: 600px;
 }
 
-.flex-none{
-  flex: none;
-}
-
 .flex-shrink{
   flex-shrink: 1;
-}
-
-.flex-shrink-0{
-  flex-shrink: 0;
 }
 
 .shrink{
@@ -964,10 +956,6 @@ p{
 
 .grow{
   flex-grow: 1;
-}
-
-.basis-0{
-  flex-basis: 0px;
 }
 
 .table-auto{
@@ -1012,10 +1000,6 @@ p{
 
 .transform-none{
   transform: none;
-}
-
-.cursor-pointer{
-  cursor: pointer;
 }
 
 .touch-auto{
@@ -1494,12 +1478,6 @@ p{
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-y-2 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
-}
-
 .space-y-4 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1839,6 +1817,10 @@ p{
   border-radius: 0.25rem;
 }
 
+.rounded-\[4px\]{
+  border-radius: 4px;
+}
+
 .rounded-b{
   border-bottom-right-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
@@ -1966,11 +1948,6 @@ p{
 .border-gray2{
   --tw-border-opacity: 1;
   border-color: rgb(208 213 221 / var(--tw-border-opacity, 1));
-}
-
-.border-gray4{
-  --tw-border-opacity: 1;
-  border-color: rgb(214 214 214 / var(--tw-border-opacity, 1));
 }
 
 .bg-\[rgb\(255\2c 0\2c 0\)\]{
@@ -2124,10 +2101,6 @@ p{
   padding: 1.5rem;
 }
 
-.p-\[calc\(6rem\/4\)\]{
-  padding: calc(6rem / 4);
-}
-
 .px-1{
   padding-left: 0.25rem;
   padding-right: 0.25rem;
@@ -2143,16 +2116,16 @@ p{
   padding-right: 1.25rem;
 }
 
-.pt-12{
-  padding-top: 3rem;
-}
-
 .pt-14{
   padding-top: 3.5rem;
 }
 
 .pt-4{
   padding-top: 1rem;
+}
+
+.pt-8{
+  padding-top: 2rem;
 }
 
 .text-left{
@@ -2209,11 +2182,6 @@ p{
 
 .align-super{
   vertical-align: super;
-}
-
-.\!text-base{
-  font-size: 1rem !important;
-  line-height: 1.5rem !important;
 }
 
 .text-base{
@@ -2299,6 +2267,10 @@ p{
 
 .tracking-1\.5{
   letter-spacing: 0.09375rem;
+}
+
+.tracking-\[0\.017em\]{
+  letter-spacing: 0.017em;
 }
 
 .text-\[\#336699\]\/\[\.35\]{
@@ -2767,6 +2739,10 @@ body{
   }
 }
 
+.hover\:cursor-pointer:hover{
+  cursor: pointer;
+}
+
 .hover\:bg-gray3:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(249 249 249 / var(--tw-bg-opacity, 1));
@@ -2795,10 +2771,6 @@ body{
 }
 
 @media (min-width: 640px){
-  .sm\:max-w-\[90\%\]{
-    max-width: 90%;
-  }
-
   .sm\:underline{
     text-decoration-line: underline;
   }
@@ -2809,8 +2781,20 @@ body{
     order: 1;
   }
 
-  .md\:max-w-\[40\%\]{
-    max-width: 40%;
+  .md\:max-w-\[50\%\]{
+    max-width: 50%;
+  }
+
+  .md\:shrink-0{
+    flex-shrink: 0;
+  }
+
+  .md\:grow-0{
+    flex-grow: 0;
+  }
+
+  .md\:basis-\[calc\(50\%-24px\)\]{
+    flex-basis: calc(50% - 24px);
   }
 
   .md\:flex-row{
@@ -2839,12 +2823,24 @@ body{
     grid-column: span 4 / span 4;
   }
 
-  .lg\:w-1\/3{
-    width: 33.333333%;
+  .lg\:max-w-\[40\%\]{
+    max-width: 40%;
   }
 
   .lg\:max-w-siteWidth{
     max-width: 1336px;
+  }
+
+  .lg\:shrink-0{
+    flex-shrink: 0;
+  }
+
+  .lg\:grow{
+    flex-grow: 1;
+  }
+
+  .lg\:basis-0{
+    flex-basis: 0px;
   }
 
   .lg\:grid-cols-3{
@@ -2853,10 +2849,6 @@ body{
 
   .lg\:grid-cols-8{
     grid-template-columns: repeat(8, minmax(0, 1fr));
-  }
-
-  .lg\:flex-row{
-    flex-direction: row;
   }
 
   .lg\:gap-16{
@@ -2876,6 +2868,10 @@ body{
       paint-order: markers;
     }
   }
+}
+
+.\[\&\>\*\]\:flex-grow>*{
+  flex-grow: 1;
 }
 
 .\[\&\>a\:hover\]\:bg-blue1>a:hover{
@@ -2899,6 +2895,11 @@ body{
   text-align: center;
 }
 
+.\[\&\>a\]\:text-lg>a{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .\[\&\>a\]\:text-xl>a{
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -2906,6 +2907,10 @@ body{
 
 .\[\&\>a\]\:font-semibold>a{
   font-weight: 600;
+}
+
+.\[\&\>a\]\:leading-6>a{
+  line-height: 1.5rem;
 }
 
 .\[\&\>a\]\:leading-\[22px\]>a{
@@ -2916,9 +2921,18 @@ body{
   letter-spacing: 0.2px;
 }
 
+.\[\&\>a\]\:text-blue2>a{
+  --tw-text-opacity: 1;
+  color: rgb(19 97 240 / var(--tw-text-opacity, 1));
+}
+
 .\[\&\>a\]\:text-white>a{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.\[\&\>a\]\:underline>a{
+  text-decoration-line: underline;
 }
 
 .\[\&\>a\]\:transition>a{
@@ -2938,3 +2952,6 @@ body{
     flex: 1 1 auto;
   }
 }
+
+
+
