--- a/src/output.css
+++ b/src/output.css
@@ -942,6 +942,10 @@ p{
   max-width: 600px;
 }
 
+.flex-none{
+  flex: none;
+}
+
 .flex-shrink{
   flex-shrink: 1;
 }
@@ -1478,6 +1482,12 @@ p{
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-y-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
 .space-y-4 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1950,6 +1960,11 @@ p{
   border-color: rgb(208 213 221 / var(--tw-border-opacity, 1));
 }
 
+.border-gray4{
+  --tw-border-opacity: 1;
+  border-color: rgb(214 214 214 / var(--tw-border-opacity, 1));
+}
+
 .bg-\[rgb\(255\2c 0\2c 0\)\]{
   --tw-bg-opacity: 1;
   background-color: rgb(255 0 0 / var(--tw-bg-opacity, 1));
@@ -2114,6 +2129,10 @@ p{
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+}
+
+.pt-12{
+  padding-top: 3rem;
 }
 
 .pt-14{
@@ -2823,6 +2842,10 @@ body{
     grid-column: span 4 / span 4;
   }
 
+  .lg\:w-1\/3{
+    width: 33.333333%;
+  }
+
   .lg\:max-w-\[40\%\]{
     max-width: 40%;
   }
@@ -2849,6 +2872,10 @@ body{
 
   .lg\:grid-cols-8{
     grid-template-columns: repeat(8, minmax(0, 1fr));
+  }
+
+  .lg\:flex-row{
+    flex-direction: row;
   }
 
   .lg\:gap-16{
