--- a/src/output.css
+++ b/src/output.css
@@ -2800,20 +2800,8 @@ body{
     order: 1;
   }
 
-  .md\:max-w-\[50\%\]{
-    max-width: 50%;
-  }
-
-  .md\:shrink-0{
-    flex-shrink: 0;
-  }
-
-  .md\:grow-0{
-    flex-grow: 0;
-  }
-
-  .md\:basis-\[calc\(50\%-24px\)\]{
-    flex-basis: calc(50% - 24px);
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:flex-row{
@@ -2846,28 +2834,16 @@ body{
     width: 33.333333%;
   }
 
-  .lg\:max-w-\[40\%\]{
-    max-width: 40%;
-  }
-
   .lg\:max-w-siteWidth{
     max-width: 1336px;
   }
 
-  .lg\:shrink-0{
-    flex-shrink: 0;
-  }
-
-  .lg\:grow{
-    flex-grow: 1;
-  }
-
-  .lg\:basis-0{
-    flex-basis: 0px;
-  }
-
   .lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:grid-cols-8{
@@ -2895,10 +2871,6 @@ body{
       paint-order: markers;
     }
   }
-}
-
-.\[\&\>\*\]\:flex-grow>*{
-  flex-grow: 1;
 }
 
 .\[\&\>a\:hover\]\:bg-blue1>a:hover{
@@ -2978,6 +2950,10 @@ body{
   .lg\:\[\&\>a\]\:flex-auto>a{
     flex: 1 1 auto;
   }
+}
+
+.\[\&\>p\]\:flex-grow>p{
+  flex-grow: 1;
 }
 
 
