--- a/src/output.css
+++ b/src/output.css
@@ -572,7 +572,7 @@ h2{
   letter-spacing: -0.0605rem;
 }
 
-@media (min-width: 768px){
+@media (min-width: 1024px){
   h2{
     font-size: 3rem;
     line-height: 1;
@@ -1476,6 +1476,10 @@ p{
   gap: 2rem;
 }
 
+.gap-10{
+  gap: 2.5rem;
+}
+
 .space-x-2 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
@@ -1562,7 +1566,7 @@ p{
 
 .divide-blue1 > :not([hidden]) ~ :not([hidden]){
   --tw-divide-opacity: 1;
-  border-color: rgb(38 109 241 / var(--tw-divide-opacity, 1));
+  border-color: rgb(19 97 240 / var(--tw-divide-opacity, 1));
 }
 
 .place-self-auto{
@@ -2308,7 +2312,7 @@ p{
 
 .text-blue1{
   --tw-text-opacity: 1;
-  color: rgb(38 109 241 / var(--tw-text-opacity, 1));
+  color: rgb(19 97 240 / var(--tw-text-opacity, 1));
 }
 
 .text-white{
@@ -2718,8 +2722,20 @@ body{
   text-transform: uppercase;
   line-height: 2rem;
   --tw-text-opacity: 1;
-  color: rgb(38 109 241 / var(--tw-text-opacity, 1));
+  color: rgb(19 97 240 / var(--tw-text-opacity, 1));
   text-decoration-line: underline;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+}
+
+.btn:hover{
+  --tw-text-opacity: 1;
+  color: rgb(67 129 243 / var(--tw-text-opacity, 1));
+}
+
+.btn:hover path{
+  fill: #4381f3;
 }
 
 @media (min-width: 640px){
@@ -2808,6 +2824,14 @@ body{
     flex-direction: row;
   }
 
+  .md\:items-center{
+    align-items: center;
+  }
+
+  .md\:gap-16{
+    gap: 4rem;
+  }
+
   .md\:divide-x-\[1px\] > :not([hidden]) ~ :not([hidden]){
     --tw-divide-x-reverse: 0;
     border-right-width: calc(1px * var(--tw-divide-x-reverse));
@@ -2854,6 +2878,10 @@ body{
     flex-direction: row;
   }
 
+  .lg\:items-start{
+    align-items: flex-start;
+  }
+
   .lg\:gap-16{
     gap: 4rem;
   }
@@ -2875,7 +2903,7 @@ body{
 
 .\[\&\>a\:hover\]\:bg-blue1>a:hover{
   --tw-bg-opacity: 1;
-  background-color: rgb(38 109 241 / var(--tw-bg-opacity, 1));
+  background-color: rgb(19 97 240 / var(--tw-bg-opacity, 1));
 }
 
 .\[\&\>a\]\:max-w-full>a{
@@ -2922,7 +2950,7 @@ body{
 
 .\[\&\>a\]\:text-blue2>a{
   --tw-text-opacity: 1;
-  color: rgb(19 97 240 / var(--tw-text-opacity, 1));
+  color: rgb(67 129 243 / var(--tw-text-opacity, 1));
 }
 
 .\[\&\>a\]\:text-white>a{
@@ -2955,6 +2983,3 @@ body{
 .\[\&\>p\]\:flex-grow>p{
   flex-grow: 1;
 }
-
-
-
